--- a/src/main/resources/fxml/PROFILE PASSWORD.fxml
+++ b/src/main/resources/fxml/PROFILE PASSWORD.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" styleClass="home" stylesheets="@styling.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI.Controller.ChangePasswordController">
+<BorderPane fx:id="pass" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" styleClass="home" stylesheets="@styling.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI.Controller.ChangePasswordController">
    <left>
       <VBox prefHeight="400.0" prefWidth="155.0" BorderPane.alignment="CENTER">
          <children>
@@ -49,14 +49,6 @@
                <padding>
                   <Insets right="19.0" />
                </padding></Button>
-            <Button fx:id="opendit_pro" layoutX="10.0" layoutY="82.0" mnemonicParsing="false" onMouseClicked="#openeditpro_frompass" prefHeight="49.0" prefWidth="190.0" text="EDIT PROFILE" VBox.vgrow="ALWAYS">
-               <graphic>
-                  <ImageView fitHeight="43.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../img/p1.png" />
-                     </image>
-                  </ImageView>
-               </graphic></Button>
             <Button layoutX="10.0" layoutY="132.0" mnemonicParsing="false" prefHeight="49.0" prefWidth="190.0" text="CHANGE PASSWORD" VBox.vgrow="ALWAYS" />
             <Region prefHeight="329.0" prefWidth="155.0" VBox.vgrow="ALWAYS" />
             <Button fx:id="logoutfrompass" layoutX="10.0" layoutY="181.0" mnemonicParsing="false" onMouseClicked="#logout_from_pass" prefHeight="49.0" prefWidth="190.0" text="LOGOUT" VBox.vgrow="ALWAYS">
@@ -80,15 +72,12 @@
                      <children>
                         <ImageView fitHeight="144.0" fitWidth="188.0" pickOnBounds="true" preserveRatio="true">
                            <VBox.margin>
-                              <Insets left="20.0" />
+                              <Insets left="15.0" />
                            </VBox.margin>
                            <image>
                               <Image url="@../img/mm.png" />
                            </image></ImageView>
-                        <Label alignment="TOP_CENTER" layoutX="10.0" layoutY="154.0" prefHeight="36.0" prefWidth="174.0" text="STATUS">
-                           <padding>
-                              <Insets right="20.0" />
-                           </padding></Label>
+                        <Label fx:id="label" alignment="CENTER" contentDisplay="CENTER" layoutX="10.0" layoutY="154.0" prefHeight="36.0" prefWidth="174.0" />
                      </children>
                   </VBox>
                   <VBox layoutX="10.0" layoutY="10.0" prefHeight="400.0" prefWidth="430.0">
@@ -116,22 +105,22 @@
                           </rowConstraints>
                            <children>
                               <Label prefHeight="18.0" prefWidth="178.0" text=" CURRENT PASSWORD" />
-                              <TextField GridPane.rowIndex="1">
+                              <TextField fx:id="cp" GridPane.rowIndex="1">
                                  <GridPane.margin>
                                     <Insets right="10.0" />
                                  </GridPane.margin></TextField>
                               <Label prefHeight="18.0" prefWidth="150.0" text=" NEW PASSWORD " GridPane.rowIndex="2" />
-                              <TextField layoutX="137.0" layoutY="43.0" GridPane.rowIndex="3">
+                              <TextField fx:id="np" layoutX="137.0" layoutY="43.0" GridPane.rowIndex="3">
                                  <GridPane.margin>
                                     <Insets right="10.0" />
                                  </GridPane.margin></TextField>
                               <Label layoutX="10.0" layoutY="107.0" prefHeight="18.0" prefWidth="74.0" GridPane.rowIndex="4" />
-                              <TextField layoutX="137.0" layoutY="104.0" GridPane.rowIndex="5">
+                              <TextField fx:id="conp" layoutX="137.0" layoutY="104.0" GridPane.rowIndex="5">
                                  <GridPane.margin>
                                     <Insets right="10.0" />
                                  </GridPane.margin></TextField>
                               <Label layoutX="222.0" layoutY="264.0" prefHeight="18.0" prefWidth="154.0" text="CONFIRM PASSWORD" GridPane.rowIndex="4" />
-                              <Button alignment="CENTER" mnemonicParsing="false" prefHeight="26.0" prefWidth="110.0" text="CONFIRM" GridPane.columnIndex="1" GridPane.rowIndex="8">
+                              <Button fx:id="conf" alignment="CENTER" mnemonicParsing="false" onMouseClicked="#changepass" prefHeight="26.0" prefWidth="110.0" text="CONFIRM" GridPane.columnIndex="1" GridPane.rowIndex="8">
                                  <GridPane.margin>
                                     <Insets left="60.0" />
                                  </GridPane.margin>
