--- a/src/main/resources/fxml/Customer.fxml
+++ b/src/main/resources/fxml/Customer.fxml
@@ -100,7 +100,7 @@
                      </HBox.margin>
                   </Button>
                   <Region layoutX="77.0" layoutY="10.0" prefHeight="58.0" prefWidth="96.0" />
-                  <Button fx:id="addcustomerbutton1" alignment="CENTER" layoutX="386.0" layoutY="28.0" mnemonicParsing="false" onMouseClicked="#logoutnow" prefHeight="40.0" prefWidth="54.0">
+                  <Button fx:id="logoutbutton" alignment="CENTER" layoutX="386.0" layoutY="28.0" mnemonicParsing="false" onMouseClicked="#logoutnow" prefHeight="40.0" prefWidth="54.0">
                      <graphic>
                         <ImageView fitHeight="32.0" fitWidth="38.0" pickOnBounds="true" preserveRatio="true">
                            <image>
