--- a/src/main/resources/fxml/addcustomer.fxml
+++ b/src/main/resources/fxml/addcustomer.fxml
@@ -101,7 +101,7 @@
                               <Cursor fx:constant="V_RESIZE" />
                            </cursor>
                         </Region>
-                        <Button fx:id="addconsumerbutton" mnemonicParsing="false" onMouseClicked="#addcustomer" prefHeight="36.0" prefWidth="94.0" style="-fx-background-color: #13336e; -fx-background-radius: 10;" text="Add" textFill="WHITE" />
+                        <Button fx:id="addcustomerbutton" mnemonicParsing="false" onMouseClicked="#addcustomer" prefHeight="36.0" prefWidth="94.0" style="-fx-background-color: #13336e; -fx-background-radius: 10;" text="Add" textFill="WHITE" />
                         <Region layoutX="10.0" layoutY="10.0" prefHeight="56.0" prefWidth="49.0" />
                         <Button fx:id="cancelbutton" layoutX="102.0" layoutY="10.0" mnemonicParsing="false" onMouseClicked="#canceltocustomer" prefHeight="36.0" prefWidth="94.0" style="-fx-background-color: #13336e; -fx-background-radius: 10;" text="Cancel" textFill="WHITE" />
                      </children>
