--- a/src/main/resources/fxml/stock.fxml
+++ b/src/main/resources/fxml/stock.fxml
@@ -9,168 +9,105 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Region?>
-<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" styleClass="emp" stylesheets="@../css/styling.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI.Controller.StockController">
-   <left>
-      <VBox prefHeight="600.0" prefWidth="190.0" BorderPane.alignment="CENTER">
-         <children>
-            <Button fx:id="bytme1" mnemonicParsing="false" onMouseClicked="#stocktodash" prefHeight="89.0" prefWidth="242.0">
-               <VBox.margin>
-                  <Insets right="2.0" />
-               </VBox.margin>
-               <font>
-                  <Font name="System Bold Italic" size="12.0" />
-               </font>
-               <graphic>
-                  <ImageView fitHeight="56.0" fitWidth="74.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../img/DESIGN.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-            </Button>
-            <Region layoutX="10.0" layoutY="145.0" prefHeight="19.0" prefWidth="190.0" />
-            <Button layoutX="10.0" layoutY="106.0" mnemonicParsing="false" prefHeight="48.0" prefWidth="190.0" text="STOCK">
-               <VBox.margin>
-                  <Insets right="2.0" />
-               </VBox.margin>
-            </Button>
-            <Region prefHeight="19.0" prefWidth="190.0" />
-            <Button layoutX="10.0" layoutY="148.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="189.0" text="UPDATE">
-               <VBox.margin>
-                  <Insets right="2.0" />
-               </VBox.margin>
-            </Button>
-            <Button layoutX="10.0" layoutY="218.0" mnemonicParsing="false" prefHeight="49.0" prefWidth="204.0" text="DELETE">
-               <VBox.margin>
-                  <Insets right="2.0" />
-               </VBox.margin></Button>
-            <Region prefHeight="312.0" prefWidth="190.0" VBox.vgrow="ALWAYS" />
-            <Region layoutX="10.0" layoutY="186.0" prefHeight="19.0" prefWidth="190.0" />
-            <Button fx:id="logout" layoutX="10.0" layoutY="197.0" mnemonicParsing="false" onMouseClicked="#logoutnow" prefHeight="49.0" prefWidth="198.0">
-               <VBox.margin>
-                  <Insets right="2.0" />
-               </VBox.margin>
-               <graphic>
-                  <ImageView fitHeight="40.0" fitWidth="53.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../img/logout_icon-icons.com_51025.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-            </Button>
-         </children>
-      </VBox>
-   </left>
+<BorderPane fx:id="stock_details_borderpane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI.Controller.StockController">
    <center>
       <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
          <children>
-            <HBox prefHeight="58.0" prefWidth="700.0">
-               <children>
-                  <Region prefHeight="34.0" prefWidth="129.0" HBox.hgrow="ALWAYS" />
-                  <ImageView fitHeight="61.0" fitWidth="70.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../img/LOGO.jpg" />
-                     </image>
-                     <HBox.margin>
-                        <Insets left="300.0" />
-                     </HBox.margin>
-                  </ImageView>
-                  <Label fx:id="stockwarning" prefHeight="18.0" prefWidth="363.0">
-                     <HBox.margin>
-                        <Insets top="20.0" />
-                     </HBox.margin>
-                  </Label>
-                  <Region layoutX="10.0" layoutY="10.0" prefHeight="34.0" prefWidth="85.0" HBox.hgrow="ALWAYS" />
-               </children>
-            </HBox>
-            <GridPane prefHeight="360.0" prefWidth="162.0" VBox.vgrow="ALWAYS">
-              <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="1.7976931348623157E308" minWidth="10.0" prefWidth="100.0" />
-              </columnConstraints>
-              <rowConstraints>
-                <RowConstraints maxHeight="1.7976931348623157E308" minHeight="10.0" prefHeight="110.80000457763671" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="1.7976931348623157E308" minHeight="10.0" prefHeight="403.59999542236324" vgrow="SOMETIMES" />
-              </rowConstraints>
-               <children>
-                  <TableView fx:id="product_view" editable="true" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="394.0" prefWidth="700.0" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.vgrow="ALWAYS">
-                    <columns>
-                        <TableColumn fx:id="product_id" prefWidth="144.79998779296875" text="Product Id" />
-                      <TableColumn fx:id="p_name" prefWidth="194.39999389648438" text="product  name" />
-                      <TableColumn fx:id="price" prefWidth="175.2000732421875" text="price" />
-                        <TableColumn fx:id="stock" prefWidth="187.199951171875" text="stock" />
-                    </columns>
-                  </TableView>
-                  <GridPane prefHeight="83.0" prefWidth="698.0">
-                    <columnConstraints>
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                    </columnConstraints>
-                    <rowConstraints>
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                    </rowConstraints>
-                     <children>
-                        <Label prefHeight="18.0" prefWidth="105.0" text="PRODUCT NAME" />
-                        <Label prefHeight="18.0" prefWidth="115.0" text="PRODUCT ID" GridPane.columnIndex="1" />
-                        <Label prefHeight="18.0" prefWidth="111.0" text="PRICE" GridPane.columnIndex="3" />
-                        <TextField fx:id="productname" prefHeight="62.0" prefWidth="173.0" GridPane.rowIndex="1">
-                           <GridPane.margin>
-                              <Insets right="2.0" />
-                           </GridPane.margin>
-                        </TextField>
-                        <TextField fx:id="productid" layoutX="10.0" layoutY="53.0" prefHeight="78.0" prefWidth="175.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
-                           <padding>
-                              <Insets left="2.0" right="2.0" />
-                           </padding>
-                           <GridPane.margin>
-                              <Insets left="2.0" right="2.0" />
-                           </GridPane.margin>
-                        </TextField>
-                        <TextField fx:id="productquantity" layoutX="10.0" layoutY="53.0" prefHeight="42.0" prefWidth="175.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
-                           <padding>
-                              <Insets left="2.0" right="2.0" />
-                           </padding>
-                           <GridPane.margin>
-                              <Insets left="2.0" right="2.0" />
-                           </GridPane.margin>
-                        </TextField>
-                        <TextField fx:id="productprice" layoutX="363.0" layoutY="48.0" prefHeight="42.0" prefWidth="175.0" GridPane.columnIndex="3" GridPane.rowIndex="1">
-                           <padding>
-                              <Insets left="2.0" right="2.0" />
-                           </padding>
-                           <GridPane.margin>
-                              <Insets right="4.0" />
-                           </GridPane.margin>
-                        </TextField>
-                        <Label prefHeight="18.0" prefWidth="76.0" text="QUANTITY" GridPane.columnIndex="2" />
-                        <Button mnemonicParsing="false" prefHeight="10.0" prefWidth="217.0" text="SEARCH" GridPane.rowIndex="2" />
-                        <Button fx:id="addbutton" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onMouseClicked="#addproductnow" prefHeight="25.0" prefWidth="173.0" text="ADD" GridPane.columnIndex="3" GridPane.rowIndex="2">
-                           <GridPane.margin>
-                              <Insets />
-                           </GridPane.margin>
-                        </Button>
-                     </children>
-                     <GridPane.margin>
-                        <Insets />
-                     </GridPane.margin>
-                  </GridPane>
-               </children>
+            <TableView fx:id="p_view" editable="true" prefHeight="341.0" prefWidth="600.0" tableMenuButtonVisible="true" VBox.vgrow="ALWAYS">
+              <columns>
+                <TableColumn fx:id="Product_Id" prefWidth="75.0" text="Product_Id" />
+                <TableColumn fx:id="Product_Name" prefWidth="75.0" text="Product_Name" />
+                  <TableColumn fx:id="Price" prefWidth="75.0" text="Price" />
+                  <TableColumn fx:id="Stock" prefWidth="75.0" text="Stock" />
+              </columns>
+               <columnResizePolicy>
+                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+               </columnResizePolicy>
                <VBox.margin>
-                  <Insets top="2.0" />
+                  <Insets bottom="10.0" left="10.0" right="10.0" />
                </VBox.margin>
-            </GridPane>
+            </TableView>
          </children>
       </VBox>
    </center>
+   <top>
+      <VBox alignment="TOP_CENTER" prefHeight="108.0" prefWidth="600.0" styleClass="emp" stylesheets="@../css/styling.css" BorderPane.alignment="CENTER">
+         <children>
+            <HBox alignment="CENTER" prefHeight="36.0" prefWidth="600.0">
+               <children>
+                  <Label alignment="CENTER" prefHeight="35.0" prefWidth="266.0" text="My Market Management">
+                     <font>
+                        <Font name="System Bold" size="18.0" />
+                     </font>
+                  </Label>
+               </children>
+               <VBox.margin>
+                  <Insets bottom="30.0" />
+               </VBox.margin>
+            </HBox>
+            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+               <children>
+                  <Label text="Stock Details">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
+                  </Label>
+               </children>
+               <VBox.margin>
+                  <Insets bottom="15.0" />
+               </VBox.margin>
+            </HBox>
+            <HBox alignment="CENTER" prefHeight="72.0" prefWidth="600.0">
+               <children>
+                  <Button fx:id="bytme" mnemonicParsing="false" onMouseClicked="#stocktodash" prefHeight="34.0" prefWidth="50.0">
+                     <graphic>
+                        <ImageView fitHeight="25.0" fitWidth="39.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../img/DESIGN.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                  </Button>
+                  <HBox prefHeight="36.0" prefWidth="109.0" />
+                  <ImageView fitHeight="23.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../img/kisspng-computer-icons-web-search-engine-website-download-search-png-simple-5ab0b1e73838d8.9158675315215293192303.png" />
+                     </image>
+                     <HBox.margin>
+                        <Insets right="5.0" />
+                     </HBox.margin>
+                  </ImageView>
+                  <TextField fx:id="searchstock" prefHeight="32.0" prefWidth="194.0" promptText="Search ">
+                     <HBox.margin>
+                        <Insets />
+                     </HBox.margin>
+                  </TextField>
+                  <HBox layoutX="130.0" layoutY="10.0" prefHeight="34.0" prefWidth="11.0" />
+                  <Button fx:id="addstock" layoutX="160.0" layoutY="10.0" mnemonicParsing="false" onMouseClicked="#addproductnow" prefHeight="25.0" prefWidth="40.0" text="Add">
+                     <HBox.margin>
+                        <Insets />
+                     </HBox.margin>
+                  </Button>
+                  <HBox layoutX="472.0" layoutY="10.0" prefHeight="34.0" prefWidth="113.0" />
+                  <Button fx:id="logout" mnemonicParsing="false" onMouseClicked="#logoutnow">
+                     <graphic>
+                        <ImageView fitHeight="25.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../img/logout_icon-icons.com_51025.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                  </Button>
+               </children>
+               <VBox.margin>
+                  <Insets bottom="5.0" />
+               </VBox.margin>
+            </HBox>
+         </children>
+      </VBox>
+   </top>
 </BorderPane>
